Update with sudo

--- a/debianupdate.yaml
+++ b/debianupdate.yaml
@@ -1,7 +1,7 @@
 ---
 - name: Debian-Update
   hosts: apt-servers
-  sudo: false
+  sudo: true
   tasks:
    - name: updates a server
      apt: update_cache=yes
