--- a/debianupdate.yaml
+++ b/debianupdate.yaml
@@ -6,9 +6,11 @@
    - name: updates a server
      apt: update_cache=yes
      register: result
+   - debug: var=result
    - name: upgrade a server
      apt: upgrade=dist
-   - debug: var=result
+     register: result2
+   - debug: var=result2
    - name: Check if a reboot is required
      register: file
      stat: path=/var/run/reboot-required get_md5=no
