--- a/deibanupdate2.yml
+++ b/deibanupdate2.yml
@@ -1,6 +1,6 @@
 ---
 - hosts: servers
-  become: true
+  become: false
   become_user: root
   tasks:
     - name: Update apt repo and cache on all Debian/Ubuntu boxes
